--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -29,6 +29,8 @@ jobs:
         cd ..
 
     # How to create a service account for automated deployments
+    # From command line login to cloud.gov before creating the service account
+    # cf login -a https://api.fr.cloud.gov --sso
     # https://cloud.gov/docs/services/cloud-gov-service-account/
     # https://docs.github.com/en/actions/configuring-and-managing-workflows/creating-and-storing-encrypted-secrets
     - name: Deploy
