--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -28,7 +28,7 @@ jobs:
         npm run build
         cd ..
 
-    # How to create a service account for automated deployments
+    # How to create a service account for automated deployments ?
     # From command line login to cloud.gov before creating the service account
     # cf login -a https://api.fr.cloud.gov --sso
     # https://cloud.gov/docs/services/cloud-gov-service-account/
