--- a/.github/workflows/pipeline-on-tag.yml
+++ b/.github/workflows/pipeline-on-tag.yml
@@ -1,10 +1,10 @@
 name: Starter Kit CI
 
 on:
+
   push:
-    branches: [ feature/* ]
-  pull_request:
     branches: [ master ]
+    tags: [RC_TEST]
 
 jobs:
   deploy:
